# node-module-rust-example

./: .gitignore  Cargo.toml  LICENSE  README.md  index.js  package.json  test.js
.cargo/: config.toml
src/: lib.rs
