[package]
authors = ["Tuan Anh Tran <me@tuananh.org>"]
name = "node-module-rust-example"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = true

[dependencies]
napi = { version = "1", features = ["serde-json"] }
napi-derive = "1"

[target.'cfg(target_os = "macos")'.dependencies]
jemallocator = { version = "0.3.2", features = ["disable_initial_exec_tls"] }

[build-dependencies]
napi-build = { version = "1" }